# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python_ci.yml
gendiff/: __init__.py  cli.py  converter.py  engine.py  file_reader.py  parser.py  tree.py
gendiff/formaters/: json_formater.py  plane_formater.py  stylish_formater.py
gendiff/scripts/: cli.py  formater.py  gendiff.py  parser.py  tree.py
tests/: test_gendiff.py
tests/fixtures/: plane_result.txt  result.json  stylish_result.txt
